Import of JJORE/Acme-Anything-0.03 from CPAN.
gitpan-cpan-distribution: Acme-Anything
gitpan-cpan-version:      0.03
gitpan-cpan-path:         JJORE/Acme-Anything-0.03.tar.gz
gitpan-cpan-author:       JJORE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-Anything
 
+0.03    2009-12-06
+        Makefile.PL is 5.005 safe so CPAN testers can fail nicer
+
 0.01    Date/time
         First version, released on an unsuspecting world.
 
