--- a/Changes
+++ b/Changes
@@ -1,8 +1,6 @@
 Revision history for Acme-Anything
 
-0.03    2009-12-06
-        Makefile.PL is 5.005 safe so CPAN testers can fail nicer
-
 0.01    Date/time
         First version, released on an unsuspecting world.
 
+0.04    Build with Dist::Zilla
