--- a/README
+++ b/README
@@ -1,49 +1,13 @@
-Acme-Anything
-
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it get an idea of the modules uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
-
-INSTALLATION
-
-To install this module, run the following commands:
-
-    perl Makefile.PL
-    make
-    make test
-    make install
 
 
-SUPPORT AND DOCUMENTATION
+This archive contains the distribution Acme-Anything,
+version 0.04:
 
-After installing, you can find documentation for this module with the perldoc command.
+  Anything, even imaginary modules are loadable
 
-    perldoc Acme::Anything
+This software is copyright (c) 2011 by Josh Jore.
 
-You can also look for information at:
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
 
-    Search CPAN
-        http://search.cpan.org/dist/Acme-Anything
 
-    CPAN Request Tracker:
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Acme-Anything
-
-    AnnoCPAN, annotated CPAN documentation:
-        http://annocpan.org/dist/Acme-Anything
-
-    CPAN Ratings:
-        http://cpanratings.perl.org/d/Acme-Anything
-
-COPYRIGHT AND LICENCE
-
-Copyright (C) 2007 Josh ben Jore
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
